2009-01-28  Hironori Bono  <hbono@chromium.org>

Reviewed by Justin Garcia.

        https://bugs.webkit.org/show_bug.cgi?id=18835
        Spelling underlines disappear when they shouldn't

        The WebCore::InsertLineBreakCommand::doApply() function splits a text node
        without copying existing markers. To fix this bug, change code which
        manually splits a text node into a CompositeEditCommand::splitTextNode() call.

        Test: editing/spelling/spelling-linebreak.html

        * editing/InsertLineBreakCommand.cpp:
        (WebCore::InsertLineBreakCommand::doApply):



Canonical link: https://commits.webkit.org/32505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40317 268f45cc-cd09-0410-ab3c-d52691b4dbfc